--- a/upload/uc_server/plugin/filecheck/plugin.xml
+++ b/upload/uc_server/plugin/filecheck/plugin.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <root>
-	<item id="name">文件权限检查</item>
+	<item id="name">Kiểm tra quyền tập tin</item>
 	<item id="version">1.0.1</item>
 	<item id="author">Monkey</item>
 	<item id="date">2008-6-16</item>
 	<item id="lastmodified">2021-5-20</item>
-	<item id="copyright">Comsenz 所有</item>
+	<item id="copyright">Comsenz All</item>
 	<item id="tabindex">2</item>
-	<item id="tips">检查 UCenter 文件是否被修改。</item>
+	<item id="tips">Kiểm tra xem tập tin UCenter đã được sửa đổi chưa.</item>
 	<item id="lang">
-		<item id="plugin_filecheck_modifed">被修改文件</item>
-		<item id="plugin_filecheck_deleted">丢失文件</item>
-		<item id="plugin_filecheck_unknow">未知文件</item>
-		<item id="plugin_filecheck_modifed_in_aweek">一周内更新</item>
+		<item id="plugin_filecheck_modifed">Tập tin đã sửa</item>
+		<item id="plugin_filecheck_deleted">Tập tin đã xóa</item>
+		<item id="plugin_filecheck_unknow">Tập tin không xác định</item>
+		<item id="plugin_filecheck_modifed_in_aweek">Cập nhật trong vòng một tuần</item>
 	</item>
 </root>
